# workflow_16s_test

./: .apikey.yaml  .env.example  .gitignore  ADVANCED_ANALYSIS_GUIDE.md  BATCH_COVARIATE_ML_GUIDE.md  BUGFIX_5_RDA_BOOLEAN_2026-01-12.md  BUGFIX_6_DATA_LOADING_2026-01-12.md  CATBOOST_STRATEGY_ANALYSIS.md  CHANGELOG_v2.0.md  CODE_QUALITY_AUDIT_2026-01-11.md  COMPLETE_IMPROVEMENTS_SUMMARY_2026-01-11.md  COMPLETE_WEAKNESS_ANALYSIS_2026-01-12.md  COMPREHENSIVE_SCIENTIFIC_REVIEW.md  CREDENTIAL_STANDARDIZATION_COMPLETION.txt  CST_PERFORMANCE_OPTIMIZATION_2026-01-11.md  ENHANCED_STATS_USAGE.md  ENHANCEMENT_RECOMMENDATIONS.md  EXCEPTION_HANDLING_IMPROVEMENTS_2026-01-11.md  FEATURE_TOGGLE_GUIDE.md  FINAL_IMPROVEMENTS_COMPLETE.md  FIXES_IMPLEMENTED_2026-01-11.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS_2026-01-11.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FINAL.md  IMPLEMENTATION_SUMMARY_ORIGINAL.md  IMPLEMENTATION_SUMMARY_QC.md  INSTALLATION.md  INSTALLATION_PERFORMANCE.md  INTEGRATION_STATUS.md  LICENSE  MANIFEST.in  METADATA_FETCHING_IMPROVEMENTS.md  METADATA_FIXES_2026-01-12.md  ML_VISUALIZATION_GUIDE.md  OVERFITTING_PREVENTION.md  PACKAGE_INVENTORY.md  PERFORMANCE_IMPROVEMENTS_COMPLETE.md  PUBLICATION_FETCHER_IMPLEMENTATION.md  (+47 more)
api_fixes/group_a/: GROUP_A_READY_FOR_STAGING.txt  REVIEW_COMPLETION_SUMMARY.txt  test_alos_chili_fix.py  test_openmeteo_date_fix.py  test_soilgrids_503_fix.py  test_soilgrids_python_fix.py  test_usgs_geology_fix.py
api_fixes/group_b/: 01_wosis_test.py  02_dynamic_world_test.py  03_nws_test.py  04_meteostat_test.py  05_pollen_test.py  GROUP_B_READY_FOR_STAGING.txt
archive/deprecated_2026-01-07/: diversity_old.py
config/: config.yaml  config_ml_only.yaml
docs/: FINAL_PROJECT_COMPLETION_REPORT.txt  MIGRATION.md
examples/: example_coordinate_deduplication.py  gee_mega_image_example.py
info/: config.md
notebooks/: anndata_exploration_2.ipynb  leafmap_alpha_earth.ipynb  leafmap_google_earth_engine.ipynb  pangenomes.ipynb  pie_charts.ipynb  testing_downstream.ipynb
resources/: config.yaml
resources/conda_envs/: workflow_16s.yml
resources/faprotax/: FAPROTAX.txt
src/: __init__.py  adams_report_data.json  classify_water_samples.py  credentials.json  debug_page_source.html  environmental_data.json  noaa_stations.json  rescue_lakes.py  rescue_soil.py  run.py  run_old.py  sample_environmental_data.json  test_environmental_data.json  test_spawn_bomb.py
src/data/: primer_data.db
src/workflow_16s.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_qc_output/: qc_report.html
workflow/: Snakefile
(+1578 files in other folders)
